<resources>
    <string name="app_name">GuessingGame</string>
    <string name="play">Play!</string>
    <string name="the_guessing_game">The Guessing Game</string>
    <string name="level_1">Level 1</string>
    <string name="high_score_title">High Score:</string>
    <string name="highScore">00</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="button10">10</string>
    <string name="level3Title">Level 3</string>
</resources>
