<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/paper"

    tools:context="com.example.breandan.guessinggame.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/the_guessing_game"
        android:id="@+id/Greeting"
        android:layout_marginTop="49dp"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#ffffff"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/high_score_title"
        android:id="@+id/highScoreTitle"
        android:layout_below="@+id/Greeting"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/highScore"
        android:id="@+id/highScoreTV"
        android:layout_below="@+id/highScoreTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:editable="true"
        android:textSize="25sp"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:id="@+id/play"
        android:clickable="true"
        android:enabled="true"
        android:textStyle="bold"
        android:onClick="@string/level_1"
        android:layout_below="@+id/highScoreTV"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp" />

</RelativeLayout>
